created header at index.html

--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">git
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="header">
+        <a href="#" class="header header_link">
+            <img src="" alt="" class="header header_logo">
+        </a>
+        <div class="header header_autorization">
+            <a href="pages/login.html" class="header header_autorization__link">
+                Вхід
+            </a>
+            <a href="pages/registration.html" class="header header_autorization__link">
+                Реєстрація
+            </a
+            ></div>
+    </header>
 </body>
 </html>
