created styles for header and added logo image and heading

--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">git
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
     <header class="header">
-        <a href="#" class="header header_link">
-            <img src="" alt="" class="header header_logo">
+        <a href="#" class="header__link">
+            <img src="img/logo.png" alt="" class="header__logo">
         </a>
-        <div class="header header_autorization">
-            <a href="pages/login.html" class="header header_autorization__link">
+        <h1 class="header__heading">Автомагазин</h1>
+        <div class="header__autorization">
+            <a href="pages/login.html" class="header__autorization__link">
                 Вхід
             </a>
-            <a href="pages/registration.html" class="header header_autorization__link">
+            <a href="pages/registration.html" class="header__autorization__link">
                 Реєстрація
             </a
             ></div>
