--- a/index.html
+++ b/index.html
@@ -1,26 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
-</head>
-<body>
-    <header class="header">
-        <a href="#" class="header__link">
-            <img src="img/logo.png" alt="" class="header__logo">
-        </a>
-        <h1 class="header__heading">Автомагазин</h1>
-        <div class="header__autorization">
-            <a href="pages/login.html" class="header__autorization__link">
-                Вхід
-            </a>
-            <a href="pages/registration.html" class="header__autorization__link">
-                Реєстрація
-            </a
-            ></div>
-    </header>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/style.css" />
+		<title>Автомагазин</title>
+	</head>
+	<body>
+		<header class="header">
+			<a href="#" class="header__link">
+				<img src="img/logo.png" alt="" class="header__logo" />
+			</a>
+			<h1 class="header__heading">Автомагазин</h1>
+			<div class="header__autorization">
+				<a href="pages/login.html" class="header__autorization__link"> Вхід </a>
+				<a href="pages/registration.html" class="header__autorization__link">
+					Реєстрація
+				</a>
+			</div>
+		</header>
+		<main class="content">
+			<section class="content__search">
+				<h2 class="content__search__heading">Пошук автомобіля:</h2>
+				<form action="https://fom.in.ua/echo" class="content__search__form">
+					<div class="form__content">
+						<label for="CarType" class="form__label"> Тип автомобіля </label>
+						<select name="car_type" id="CarType" class="form__select" required>
+							<option selected hidden disabled>Тип автомобіля</option>
+							<option value="passenger">Лековий</option>
+							<option value="truck">Вантажний</option>
+						</select>
+						<label for="CarName" class="form__label"> Марка автомобіля </label>
+						<select name="car_name" id="CarName" class="form__select" required>
+							<option selected hidden disabled>Марка автомобіля</option>
+							<option value="bmw">BMW</option>
+							<option value="audi">Audi</option>
+							<option value="ford">Ford</option>
+							<option value="kia">Kia</option>
+							<option value="volkswagen">Volkswagen</option>
+						</select>
+						<label for="CarCountry" class="form__label">
+							Країна виробник
+						</label>
+						<select
+							name="car_country"
+							id="CarCountry"
+							class="form__select"
+							required>
+							<option selected hidden disabled>Країна виробник</option>
+							<option value="us">Америка</option>
+							<option value="kr">Корея</option>
+							<option value="de">Німечина</option>
+						</select>
+						<label for="CarFuel" class="form__label"> Тип палива </label>
+						<select name="car_fuel" id="CarFuel" class="form__select" required>
+							<option selected hidden disabled>Тип палива</option>
+							<option value="gasoline">Бензин</option>
+							<option value="diesel">Дизель</option>
+							<option value="electric">Електричний</option>
+						</select>
+					</div>
+					<div class="form__content">
+						<label for="CarColor" class="form__label"> Колір </label>
+						<select
+							name="car_color"
+							id="CarColor"
+							class="form__select"
+							required>
+							<option selected hidden disabled>Колір</option>
+							<option value="blue">Синій</option>
+							<option value="black">Чорний</option>
+							<option value="white">Білий</option>
+						</select>
+						<label class="form__label"> Рік випуску </label>
+						<select name="car_year_from" class="form__select" required>
+							<option selected hidden disabled>Від</option>
+							<option value="2015">2015</option>
+							<option value="2016">2016</option>
+							<option value="2017">2017</option>
+							<option value="2018">2018</option>
+							<option value="2019">2019</option>
+							<option value="2020">2020</option>
+							<option value="2020">2021</option>
+							<option value="2020">2022</option>
+							<option value="2020">2023</option>
+						</select>
+						<select name="car_year_to" class="form__select" required>
+							<option selected hidden disabled>До</option>
+							<option value="2015">2015</option>
+							<option value="2016">2016</option>
+							<option value="2017">2017</option>
+							<option value="2018">2018</option>
+							<option value="2019">2019</option>
+							<option value="2020">2020</option>
+							<option value="2020">2021</option>
+							<option value="2020">2022</option>
+							<option value="2020">2023</option>
+						</select>
+						<label class="form__label"> Ціна </label>
+						<input
+							type="text"
+							name="car_price-from"
+							placeholder="Від"
+							pattern="[0-9]{3-6}"
+							class="form__input"
+							required />
+						<input
+							type="text"
+							name="car_price-to"
+							placeholder="До"
+							pattern="[0-9]{3-6}"
+							class="form__input"
+							required />
+					</div>
+					<div class="form__content">
+						<label class="form__label"> Стан автомобіля </label>
+						<input
+							type="checkbox"
+							name="condition"
+							value="new"
+							class="form__checkbox" />
+						<label class="form__label"> Новий </label>
+						<input
+							type="checkbox"
+							name="condition"
+							value="used"
+							class="form__checkbox" />
+						<label class="form__label"> Вживаний </label>
+						<input
+							type="checkbox"
+							name="condition"
+							value="custom-clearence"
+							class="form__checkbox" />
+						<label class="form__label"> Розмитнений </label>
+						<input
+							type="checkbox"
+							name="condition"
+							value="non-custom-clearence"
+							class="form__checkbox" />
+						<label class="form__label"> Не розмитнений </label>
+						<input
+							type="checkbox"
+							name="condition"
+							value="crushed"
+							class="form__checkbox" />
+						<label class="form__label"> Битий </label>
+						<input
+							type="checkbox"
+							name="condition"
+							value="non-crushed"
+							class="form__checkbox" />
+						<label class="form__label"> Не Битий </label>
+						<label class="form__label"> Комфорт </label>
+						<input
+							type="checkbox"
+							name="comfort"
+							value="ac"
+							class="form__checkbox" />
+						<label class="form__label"> Кондиціонер </label>
+						<input
+							type="checkbox"
+							name="comfort"
+							value="multymedia"
+							class="form__checkbox" />
+						<label class="form__label"> Мультимедіа </label>
+						<input
+							type="checkbox"
+							name="comfort"
+							value="leather-interior"
+							class="form__checkbox" />
+						<label class="form__label"> Шкіряний салон </label>
+						<input
+							type="checkbox"
+							name="comfort"
+							value="sunroof"
+							class="form__checkbox" />
+						<label class="form__label"> Люк </label>
+						<input
+							type="checkbox"
+							name="comfort"
+							value="cruise-control"
+							class="form__checkbox" />
+						<label class="form__label"> Круїз-контроль </label>
+						<input
+							type="checkbox"
+							name="comfort"
+							value="multi-wheel"
+							class="form__checkbox" />
+						<label class="form__label"> Мультируль </label>
+					</div>
+				</form>
+			</section>
+		</main>
+	</body>
 </html>
