modified recomendation cars list and added styles

--- a/index.html
+++ b/index.html
@@ -251,45 +251,104 @@
 				</form>
 			</section>
 			<section class="cars">
-                <div class="car">
-                    <div class="car__header">
-                        <img src="img/car1.webp" alt="car1" class="car__image" />
-                        <h3 class="car__heading">Audi</h3>
-                        <p class="car__year">2019</p>
-                        <p class="car__price">55000$</p>
-                        <p class="car__fuel">Дизель</p>
-                        <p class="car__color">Білий</p>
-                    </div>
-                </div>
 				<div class="car">
+					<img src="img/car1.webp" alt="car1" class="car__image" />
 					<div class="car__header">
-						<img src="img/car2.webp" alt="car2" class="car__image" />
+						<h3 class="car__heading">Audi</h3>
+						<p class="car__price">55000$</p>
+					</div>
+					<div class="car__content">
+						<div class="content__data">
+							<p class="car__year">2019</p>
+							<p class="car__fuel">Дизель</p>
+							<p class="car__color">Білий</p>
+						</div>
+						<div class="car__condition">
+							<h4 class="car__content__heading">Стан автомобіля:</h4>
+							<p class="car__content__text">Вживаний, розмитнений, битий</p>
+						</div>
+						<div class="car__comfort">
+							<h4 class="car__content__heading">Комфорт:</h4>
+							<p class="car__content__text">Кондиціонер, люк, мультируль</p>
+						</div>
+					</div>
+					<div class="car__footer">
+						<a href="#" class="car__link"> Перейти до автомобіля </a>
+					</div>
+				</div>
+				<div class="car">
+					<img src="img/car2.webp" alt="car2" class="car__image" />
+					<div class="car__header">
 						<h3 class="car__heading">BMW</h3>
-						<p class="car__year">2021</p>
-						<p class="car__price">86000</p>
-						<p class="car__fuel">Дизель</p>
-						<p class="car__color">Чорний</p>
+						<p class="car__price">86000$</p>
+					</div>
+					<div class="car__content">
+						<div class="content__data">
+							<p class="car__year">2021</p>
+							<p class="car__fuel">Дизель</p>
+							<p class="car__color">Чорний</p>
+						</div>
+						<div class="car__condition">
+							<h4 class="car__content__heading">Стан автомобіля:</h4>
+							<p class="car__content__text">Вживаний, розмитнений, битий</p>
+						</div>
+						<div class="car__comfort">
+							<h4 class="car__content__heading">Комфорт:</h4>
+							<p class="car__content__text">Кондиціонер, люк, мультируль</p>
+						</div>
+					</div>
+					<div class="car__footer">
+						<a href="#" class="car__link"> Перейти до автомобіля </a>
 					</div>
 				</div>
-				</div>
 				<div class="car">
+					<img src="img/car3.webp" alt="car3" class="car__image" />
 					<div class="car__header">
-						<img src="img/car3.webp" alt="car3" class="car__image" />
 						<h3 class="car__heading">Ford</h3>
-						<p class="car__year">2018</p>
-						<p class="car__price">19000</p>
-						<p class="car__fuel">Бензин</p>
-						<p class="car__color">Червоний</p>
+						<p class="car__price">19000$</p>
+					</div>
+					<div class="car__content">
+						<div class="content__data">
+							<p class="car__year">2018</p>
+							<p class="car__fuel">Бензин</p>
+							<p class="car__color">Червоний</p>
+						</div>
+						<div class="car__condition">
+							<h4 class="car__content__heading">Стан автомобіля:</h4>
+							<p class="car__content__text">Вживаний, розмитнений, битий</p>
+						</div>
+						<div class="car__comfort">
+							<h4 class="car__content__heading">Комфорт:</h4>
+							<p class="car__content__text">Кондиціонер, люк, мультируль</p>
+						</div>
+					</div>
+					<div class="car__footer">
+						<a href="#" class="car__link"> Перейти до автомобіля </a>
 					</div>
 				</div>
 				<div class="car">
+					<img src="img/car4.webp" alt="car4" class="car__image" />
 					<div class="car__header">
-						<img src="img/car4.webp" alt="car4" class="car__image" />
 						<h3 class="car__heading">Ford</h3>
-						<p class="car__year">2021</p>
-						<p class="car__price">30000</p>
-						<p class="car__fuel">Дизель</p>
-						<p class="car__color">Чорний</p>
+						<p class="car__price">30000$</p>
+					</div>
+					<div class="car__content">
+						<div class="content__data">
+							<p class="car__year">2021</p>
+							<p class="car__fuel">Дизель</p>
+							<p class="car__color">Чорний</p>
+						</div>
+						<div class="car__condition">
+							<h4 class="car__content__heading">Стан автомобіля:</h4>
+							<p class="car__content__text">Вживаний, розмитнений, битий</p>
+						</div>
+						<div class="car__comfort">
+							<h4 class="car__content__heading">Комфорт:</h4>
+							<p class="car__content__text">Кондиціонер, люк, мультируль</p>
+						</div>
+					</div>
+					<div class="car__footer">
+						<a href="#" class="car__link"> Перейти до автомобіля </a>
 					</div>
 				</div>
 			</section>
