added footer and styles

--- a/index.html
+++ b/index.html
@@ -252,7 +252,11 @@
 			</section>
 			<section class="cars">
 				<div class="car">
-					<img src="img/car1.webp" alt="car1" class="car__image" />
+					<div class="car__image__box">
+						<a href="#" class="image__link">
+							<img src="img/car1.webp" alt="car1" class="car__image" />
+						</a>
+					</div>
 					<div class="car__header">
 						<h3 class="car__heading">Audi</h3>
 						<p class="car__price">55000$</p>
@@ -277,7 +281,11 @@
 					</div>
 				</div>
 				<div class="car">
-					<img src="img/car2.webp" alt="car2" class="car__image" />
+					<div class="car__image__box">
+						<a href="#" class="image__link">
+							<img src="img/car2.webp" alt="car2" class="car__image" />
+						</a>
+					</div>
 					<div class="car__header">
 						<h3 class="car__heading">BMW</h3>
 						<p class="car__price">86000$</p>
@@ -302,7 +310,11 @@
 					</div>
 				</div>
 				<div class="car">
-					<img src="img/car3.webp" alt="car3" class="car__image" />
+					<div class="car__image__box">
+						<a href="#" class="car__image__link">
+							<img src="img/car3.webp" alt="car3" class="car__image" />
+						</a>
+					</div>
 					<div class="car__header">
 						<h3 class="car__heading">Ford</h3>
 						<p class="car__price">19000$</p>
@@ -327,7 +339,11 @@
 					</div>
 				</div>
 				<div class="car">
-					<img src="img/car4.webp" alt="car4" class="car__image" />
+					<div class="car__image__box">
+						<a href="#" class="car__image__link">
+							<img src="img/car4.webp" alt="car4" class="car__image" />
+						</a>
+					</div>
 					<div class="car__header">
 						<h3 class="car__heading">Ford</h3>
 						<p class="car__price">30000$</p>
@@ -353,5 +369,11 @@
 				</div>
 			</section>
 		</main>
+		<footer class="footer">
+			<a href="#" class="header__link">
+				<img src="img/logo.png" alt="" class="footer__logo" />
+			</a>
+			<h1 class="footer__heading">Автомагазин</h1>
+		</footer>
 	</body>
 </html>
